# gbiv

./: .gitignore  .last-branch  CLAUDE.md  Cargo.toml  GBIV.md  LICENSE  Makefile.toml  PLAN.md  README.md  prd.json  progress.txt
.claude/: settings.json
.claude/hooks/: spray-bottle.sh
.claude/skills/sync-backlog/: SKILL.md
.claude/skills/vat/: SKILL.md
backlog/: .used-ids  assign-command.md  backlog.md  config-command.md  rewrite-parser.md  state-file-module.md  sync-logic.md  update-mark.md  update-reset.md  update-status.md
backlog/items/: gbv-q3t.md
docs/: high-level-design.md
docs/arrows/: cli-and-palette.md  feature-ledger.md  index.yaml  observation.md  tmux-mirror.md  worktree-lifecycle.md
docs/gbiv/: high-level-design.md
docs/gbiv/llds/: worktree-lifecycle.md
docs/gbiv/specs/: cli-and-palette.md  feature-ledger.md  (+3 more)
docs/gbork/: high-level-design.md
docs/llds/: cli-and-palette.md  feature-ledger.md  observation.md  tmux-mirror.md
docs/specs/: cli-and-palette.md  feature-ledger.md  observation.md  tmux-mirror.md  worktree-lifecycle.md
gbork/: Cargo.toml
gbork/src/: api.rs  gbiv_root.rs  locator.rs  main.rs  port_file.rs  proc_walk.rs  server.rs  tmux.rs
gbork/src/cli/: get.rs  mod.rs  send.rs  start.rs  status.rs
skills/gbork/: SKILL.md
src/: START.md  colors.rs  gbiv_md.rs  git_utils.rs  main.rs
src/commands/: cleanup.rs  exec.rs  init.rs  mark.rs  mod.rs  prd.rs  rebase_all.rs  reset.rs  reset_hard_allcolor_tests.rs  reset_hard_basic_tests.rs  reset_hard_stash_tests.rs  reset_tests.rs  status.rs  tidy.rs  tidy_tests.rs
(+107 files in other folders)
